--- a/getstarted.travis.yml
+++ b/getstarted.travis.yml
@@ -1,1 +1,13 @@
 language: java
+body='{
+"request": {
+  "branch":"master"
+}}'
+
+curl -s -X POST \
+  -H "Content-Type: application/json" \
+  -H "Accept: application/json" \
+  -H "Travis-API-Version: 3" \
+  -H "Authorization: token xxxxxx" \
+  -d "$body" \
+  https://api.travis-ci.org/repo/travis-ci%2FAutotestsSelenium1/requests
