--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 # skip the default install (mvn install -DskipTests=true) to speed up the build
-install: true
-script: mvn install
+install: ant deps
+script: ant test
 jdk:
 - openjdk7
