--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
     <path id="AutoTestsSelenium1.classpath">
         <pathelement location="bin"/>
         <pathelement location="lib/selenium-server-standalone-2.53.1.jar"/>
+        <pathelement location=".classpath"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -60,10 +61,9 @@
         <antcall target="build"/>
     </target>
     
-    <target name="test">
+  <target name="test">
+    <classpath refid="AutoTestsSelenium1.classpath"/>
   <junit printsummary="yes" haltonfailure="yes">
-
-   <classpath refid="AutoTestsSelenium1.classpath"/>
     <test name="tests.OregTest"
              haltonfailure="no" outfile="result">
 
